# pydantic_AI

./: .gitignore  pydantic_model.ipynb  pyproject.toml  rag.ipynb  sql_generation.ipynb  weather_agent.ipynb
