[tool.poetry]
name = "pydanticai-demo"
version = "0.1.0"
description = ""
authors = ["supreet <supreet.shm523@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-ai = "^0.0.17"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.5"
logfire = "^2.11.1"
devtools = "0.12.0"
psycopg2-binary = "^2.9.10"
cohere = "^5.13.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
